--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,6 +1,7 @@
 form {
-  width: 30rem;
+  width: 32rem;
   position: relative;
+  margin-top: 3.6rem;
 }
 
 form input {
@@ -11,7 +12,7 @@ form input {
   padding-right: 1.3rem;
   border: none;
   border-radius: 1.8rem;
-  background-color: rgb(224, 216, 216);
+  background-color: rgb(255, 255, 255);
   font-size: 1.8rem;
 }
 
@@ -20,6 +21,7 @@ form input:focus {
 }
 
 button {
+  cursor: pointer;
   border: none;
   background: none;
   left: 0.8rem;
